--- a/public/index.html
+++ b/public/index.html
@@ -3,27 +3,75 @@
   <head>
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
-
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
-
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@1,400;1,700&display=swap" rel="stylesheet">
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweet-section.css" type="text/css" />
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+  <!-- icons -->
+    <script src="https://kit.fontawesome.com/b8f8382d1d.js" crossorigin="anonymous"></script>
   </head>
-
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
       <span>tweeter</span>
     </nav>
-
+    <!-- the main header -->
+    <header class="main-header">
+      <img src="/images/profile-hex.png"> 
+      <br>
+      <h2>Your Name</h2>
+    </header>
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+      <!-- tweet input section -->
+      <section class="new-tweet">
+        <h2>Compose Tweet</h2>
+        <form method="POST" action="/tweets" >
+          <textarea name="text" id="tweet-text"  placeholder="What are you humming about?"></textarea>
+          <div class="char-counter">
+            <button type="submit">Tweet</button>
+            <output name="counter" class="counter" for="tweet-text">140</output>
+          </div>
+        </form>
+        <!-- tweet showing section -->
+        <section class="tweets-section">
+          <article>
+            <header>
+              <div>
+                <i class="fas fa-user-circle"></i>
+                 Newton
+              </div>
+              <div class="account-name">
+                  @SjrIsaak
+              </div>
+            </header>
+            <h5>
+              this is the article
+            </h5>
+            <footer>
+              <div>
+                  <h6>10 days ago</h6> 
+              </div>
+              <div>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-retweet"></i>
+                <i class="far fa-flag"></i>
+              </div>
+            </footer>
+          </article>
+        </section>
+      </section>
+    </main>
   </body>
 </html>
