--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <header class="main-header">
       <img src="/images/profile-hex.png"> 
       <br>
-      <h2>Your Name</h2>
+      <h2>Affaf Rai</h2>
     </header>
     <!-- Page-specific (main) content here -->
     <main class="container">
@@ -40,7 +40,6 @@
         <h2>Compose Tweet</h2>
         <div id="error-msg" hidden>
           <i class="fa fa-times-circle"></i>
-          Replace this text with your own text.
        </div>
         <form method="POST" action="/tweets" id="tweet-submit">
           <textarea name="text" id="tweet-text"  placeholder="What are you humming about?"></textarea>
